# uranium-profiler

./: .gitignore  README.md  uranium_place_attributes.py
UraniumVisualizer/: .clang-format  CMakeLists.txt  EventType.h  FileParser.cpp  FileParser.h  MainFrame.cpp  MainFrame.h  ProfilingSession.cpp  ProfilingSession.h  SessionEvent.cpp  SessionEvent.h  SessionHeader.cpp  SessionHeader.h  TimelinePainter.cpp  TimelinePainter.h  main.cpp  mainwindow.cpp  mainwindow.h
backend-manual-tests/: Cargo.toml
backend-manual-tests/src/: main.rs
backend_manual_tests/: Cargo.toml  uranium_session.ups  uranium_session_bin.ups
backend_manual_tests/src/: main.rs
backend_manual_tests/uranium_session_bin/: thread--0.upt  thread--1.upt  thread--2.upt  thread--3.upt
uranium-backend/: Cargo.toml
uranium-backend/src/session_writer/: binary_writer.rs  json_writer.rs
uranium-prof-macro/: Cargo.toml
uranium-prof-macro/src/: lib.rs  tests.rs
uranium-visualizer/: CMakeLists.txt  EventType.h  FileParser.cpp  FileParser.h  FunctionColors.h  MainFrame.cpp  MainFrame.h  ProfilingSession.cpp  ProfilingSession.h  SessionEvent.cpp  SessionEvent.h  SessionHeader.cpp  SessionHeader.h  mainwindow.cpp  mainwindow.h
uranium_backend/src/: interface.rs  lib.rs  tests.rs  threading.rs  timing.rs  utils.rs
uranium_backend/src/session_writer/: binary_writer.rs  mod.rs
