[package]
name = "backend_manual_tests"
version = "0.1.0"
authors = ["n-dub <ragucoz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uranium_backend = { path = "../uranium_backend" }
uranium_prof_macro = { path = "../uranium-prof-macro" }

[profile.release]
debug = true
