[package]
name = "uranium_backend"
version = "0.1.0"
authors = ["n-dub <ragucoz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"

[profile.test]
# opt-level = 3

[profile.release]
debug = true
